/**
 * 系统共享枚举定义
 *
 * 这里定义了系统中所有共享的枚举类型，确保 RPC 和 HTTP 层使用一致的枚举值。
 * 各层通过类型转换使用这些枚举，保持业务逻辑的一致性。
 */
namespace go core

// =================================================================
//                            核心枚举
// =================================================================

/**
 * 用户状态枚举
 */
enum UserStatus {
    ACTIVE = 1,    // 活跃状态​​：用户账号正常可用，拥有所有权限，可以登录和操作。
    INACTIVE = 2,  // 未激活状态​​：需要由管理员进行激活
    SUSPENDED = 3, // 暂停状态​​：离职
    LOCKED = 4,    // 锁定状态​​：用户账号被锁定，无法登录和操作。
}

/**
 * 角色定义状态枚举
 */
enum RoleStatus {
    ACTIVE = 1,     // 活跃状态​​：角色正常可用。
    INACTIVE = 2,   // 未激活状态​​：需要由管理员进行激活
    DEPRECATED = 3, // 已弃用
}

/**
 * 性别枚举
 */
enum Gender {
    UNKNOWN = 0, // 未知
    MALE = 1,    // 男性
    FEMALE = 2,  // 女性
}